2006-08-11 01:53-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: Corrected encoding issues with custom
	view in encodeWithCoder: it now properly encodes itself as
	an NSCustomView.

2006-08-09 02:29-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: encodeWithCoder: changes to encode the
	customview.
	* GormCore/GormNibWrapperBuilder.m: Add oids for connectors and
	also add one for the owner.

2006-08-06 00:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilesOwner.m: Remove implementation of initWithCoder:
	* GormCore/GormNibWrapperBuilder.m: In -[NSIBObjectData 
	initWithDocument:] add code to set NSFramework key.

2006-08-05 08:46-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m: Fixes to encode classes.nib file
	properly.
	* GormCore/GormFilePrefsManager.m: Added code to encode a dummy
	info.nib for nib saving.
	* GormCore/GormFilesOwner.m: Code to encode this as a NSCustomObject
	in encodeWithCoder:
	* GormCore/GormNibWrapperBuilder.m: in 
	-[NSIBObjectData initWithDocument:] added code to pull the names
	and generate OIDS for the .nib properly.

2006-08-01 00:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Add GormNibWrapperBuilder.m
	* GormCore/GormClassManager.m: Correct nibData method to properly
	output information in classes.nib format.
	* GormCore/GormDocument.m: Slight improvement to windowAndRect:
	forObject:.
	* GormCore/GormFilePrefsManager.[hm]: Add nibData method.
	* GormInfo.plist: Change GSNibFileType entry to "Editor"
	* GormNibWrapperBuilder.m: Class to write nibs.
	
2006-07-18 23:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFunctions.m: Remove the width and height adjustment
	from the function minimalContainerFrame().
	* GormCore/GormPrivate.m: Add the encoding logic for saving
	NSCustomObject.